@@ -1,3 +1,7 @@
+2014-12-09
+
+	* src/prefs_filter.c: fixed a bug that reorder by DnD was not saved.
+
 2014-11-20
 
 	* version 3.5.0beta2
